[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swaptdisplay"
version = "0.1.0"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
dependencies = ["dateparser>=1.3.0", "httpx>=0.28.1", "textual>=8.1.1"]

[project.scripts]
swaptdisplay = "main:main"

[dependency-groups]
dev = ["textual-dev", "textual-serve", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.ruff]
line-length = 90
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
